--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./firstpage.css" />
-    <title>firstPage</title>
+    <title>Lucky Bunny</title>
 </head>
 <body>
 
@@ -14,7 +14,7 @@
 
     <h1 class="name"> Lucky Bunny</h1>
 </div>
-<h5 class="how">Roll some colored dice to find the same-colored carrots. Avoid losing lives by grabbing carrots, and collect all carrots before using all of your lives.
+<h5 class="how">Roll some colored dice to find the same-colored carrots. <br> Avoid losing lives by grabbing carrots, and collect all carrots before using all of your lives.
 <a class="link" href="./game.html"><strong>PLAY</strong></a>
 
 
